# Agentic-Core

Core-Agents/: .gitignore  LICENSE  README.md  __init__.py  core_agents.pth  pyproject.toml  setup.py
Core-Agents/Architecture/: __init__.py  architect_agent.py
Core-Agents/Base/: __init__.py  agent_factory.py  base_agent.py  event_bus.py
Core-Agents/CodeGen/: __init__.py  code_generator_agent.py
Core-Agents/Documentation/: __init__.py  docs_agent.py
Core-Agents/QA/: __init__.py  qa_agent.py
